--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^4.19.2",
+    "express": "4.18.2",
     "express-session": "^1.18.2",
     "mongoose": "^8.16.4"
   },
